--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+prefix=13
 spring.datasource.url=jdbc:oracle:thin:@172.22.13.130:1538:MIICDEV
 spring.datasource.username=APPL_SNI
 spring.datasource.password=ApplSni2017
