--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-prefix=13
-spring.datasource.url=jdbc:oracle:thin:@172.22.13.130:1538:MIICDEV
+#Using the p6spy interceptor for sql script generation
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@172.22.13.130:1538:MIICDEV
+
 spring.datasource.username=APPL_SNI
 spring.datasource.password=ApplSni2017
-
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
