--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+spring.main.web-environment=false
+
 #Using the p6spy interceptor for sql script generation
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@172.22.13.130:1538:MIICDEV
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@172.22.13.130:1538:MIICDEV
+spring.datasource.url=jdbc:oracle:thin:@172.22.13.130:1538:MIICDEV
 
 spring.datasource.username=APPL_SNI
 spring.datasource.password=ApplSni2017
